2016-09-26  Per Bothner  <per@bothner.com>

	* PictureToSvg.java (writePaint): Remove '-' from StandardColor name.

2016-09-23  Per Bothner  <per@bothner.com>

	* PictureVisitor.java (PictureVisitor): Fix logic errors.

2016-09-09  Per Bothner  <per@bothner.com>

	* DrawImage.java (toPictureOrNull): New utility method.

2016-07-28  Per Bothner  <per@bothner.com>

	Adjust bounding box for stroke width.
	* PictureVisitor.java (class TrackingState): New class.
	* SVGUtils.java (toSVG): Adjust bounds for stroke width.
	(class AdjustBounds): New class, extends TrackingState.

2016-07-26  Per Bothner  <per@bothner.com>

	Support setting Stroke properties and their use by DrawShape.
	* DrawShape.java (makeDraw): Factory method from creating
	DrawShape possibly wrapped in WithPaint.
	* PBox.java (combine): Convenience method.
	* PictureToSvg.java: Convert Stroke properties to SVG properties.
	* WithPaint.java (stroke, propertiesSet): New fields for
	noting which Stroke-related proprties are set and which inherited.
	(paint): Handle also updating/merging Stroke.

2016-07-26  Per Bothner  <per@bothner.com>

	Rename Paintable to Picture.

2016-07-26  Per Bothner  <per@bothner.com>

	Re-implement conversion to SVG without using external library.
	* PictureVisitor.java: New visitor class.
	* PictureToSvg.java: New class, extends PictureVisitor.
	* SVGUtils.java: Simplify to use PictureToSvg.
	* Paintable.java (visit): New abstract method.
	* DrawImage.java (visit): New visit method.
	* DrawShape.java (visit): Likewise.
	* FillShape.java (visit): Likewise.
	* PBox.java (visit): Likewise.
	* WithComposite.java (visit): Likewise.
	* WithPaint.java (visit): Likewise.
	* WithTransform.java (visit): Likewise.
	* FillShape.java (getShape): New method.
	* PBox.java (paintables): Rename field to children.
	* WithComposite.java (paintables): Rename to children.
	* StandardColor.java (getName): New method.

2016-07-22  Per Bothner  <per@bothner.com>
