@@ -1,5 +1,7 @@
 2016-09-28  Per Bothner  <per@bothner.com>
 
+	* kawa/pictures.scm (border, border-shape, re-center): New functions.
+
 	* kawa/pictures.scm (rectangle): Fix logic bug.
 
 2016-09-03  Per Bothner  <per@bothner.com>
