@@ -1,3 +1,9 @@
+2016-09-28  Per Bothner  <per@bothner.com>
+
+	* PBox.java (sPicture, asPictureAll): Move to ..
+	* Pictures.java: New helper class.
+	(borderShape): New static method.
+
 2016-09-26  Per Bothner  <per@bothner.com>
 
 	* PictureToSvg.java (writePaint): Remove '-' from StandardColor name.
